# TFM

./: LICENSE  README.md
arduino_sketchbook/arduino_canyonero/: arduino_canyonero.ino
canyonero_base/: CMakeLists.txt  package.xml
canyonero_base/inc/: Arduino.h  canyonero_hardware.h
canyonero_base/launch/: base.launch
canyonero_base/src/: Arduino.cpp  canyonero_hardware.cpp
canyonero_control/: CMakeLists.txt  package.xml
canyonero_control/config/: control.yaml  localization.yaml  teleop.yaml  twist_mux.yaml
canyonero_control/launch/: control.launch  teleop.launch
canyonero_description/: CMakeLists.txt  package.xml
canyonero_description/config/: show.rviz
canyonero_description/meshes/: 9dof_razor_imu.stl  canyonero_plates_collision.stl  canyonero_wheel_collision.stl
canyonero_description/robots/: show.launch  show_gazebo.launch
canyonero_description/urdf/: canyonero.urdf  canyonero.urdf.sublime-workspace  canyonero.urdf.xacro  canyonero_base.urdf.xacro  canyonero_properties.urdf.xacro  canyonero_wheel.transmission.xacro  canyonero_wheel.urdf.xacro
canyonero_description/urdf/sensors/: canyonero_imu.urdf.xacro
canyonero_description/urdf/wheels/: canyonero_wheel.urdf.xacro
canyonero_gazebo/: CMakeLists.txt
canyonero_gazebo/launch/: canyonero_bringup.launch  canyonero_sim.launch  canyonero_sim2.launch  practice1.launch  practice_worlds.launch  sim.launch
canyonero_gazebo/urdf/sensors/: imu.gazebo.xacro
canyonero_gazebo/worlds/: practice1.world  practice1.world~  practice2.world  practice3.world  practice_1.sdf~
canyonero_robot/: package.xml
src/arduino_sketchbook/: Motor_test_ros.ino  two_motors.ino
src/arduino_sketchbook/two_motors/: two_motors.ino
src/canyonero_control/: Arduino.cpp  Arduino.h  CanyoneroHW_interfaces.cpp  canyonero_hardware_interfaces.h
src/canyonero_control/launch/: control.launch  teleop.launch
src/canyonero_description/: CMakeLists.txt
src/canyonero_description/config/: show.rviz
src/canyonero_description/docs/: Canyonero_center_mass.txt  Canyonero_wheel_center_mass.txt
src/canyonero_description/meshes/: 9dof_razor_imu.stl  Adaptador_roda_eix_18.stl  arduino_mount.stl  canyonero_wheel_collision.stl  kinect.stl  rpi.stl
src/canyonero_description/robots/: show.launch  show.launch~  show2.launch  show2.launch~
src/canyonero_description/urdf/: canyonero.urdf.xacro  canyonero2.urdf  canyonero2.urdf~  canyonero_base.urdf.xacro  canyonero_properties.urdf.xacro
src/canyonero_description/urdf/sensors/: canyonero_imu.urdf.xacro  canyonero_kinect.urdf.xacro
src/canyonero_description/urdf/wheels/: canyonero_wheel.urdf.xacro
src/canyonero_gazebo/: package.xml
src/canyonero_gazebo/launch/: practice1.launch  practice1.launch~
src/canyonero_gazebo/urdf/: canyonero.gazebo.xacro  canyonero_gazebo.urdf.xacro  canyonero_sensors_gazebo.urdf.xacro
src/canyonero_gazebo/urdf/sensors/: kinect.gazebo.xacro
src/canyonero_gazebo/worlds/: practice1.world
src/canyonero_project/: CMakeLists.txt  package.xml
src/canyonero_project/launch/: full.launch  joy_node.launch
src/canyonero_project/src/: canyonero_control.cpp  canyonero_control.h  canyonero_odom.cpp  canyonero_odom.h
src/canyonero_robot/canyonero_base/inc/: Arduino.h  canyonero_hardware.h
src/canyonero_robot/canyonero_base/launch/: base.launch
src/canyonero_robot/canyonero_base/src/: Arduino.cpp
src/canyonero_robot/canyonero_robot/: CMakeLists.txt
src/joystick_control/: CMakeLists.txt  package.xml
src/joystick_control/launch/: control_motor1.launch  rosserial.launch
src/joystick_control/src/: velocity_control.cpp  velocity_control.h  velocity_control_double.cpp  velocity_control_double.h
src/openni_camera/: CMakeLists.txt
src/openni_camera/cmake/: openni_cameraConfig-version.cmake  openni_cameraConfig.cmake
src/openni_launch/: CMakeLists.txt
src/openni_launch/cmake/: openni_launchConfig-version.cmake  openni_launchConfig.cmake
src/openni_launch/kinect_calibration/: depth_A00365A06777051A.yaml  rgb_A00365A06777051A.yaml
src/openni_launch/launch/: kinect_calibrated.launch  openni.launch
