<?xml version="1.0"?>
<package>
  <name>canyonero_robot</name>
  <version>0.0.1</version>
  <description>Metapackage for Canyonero robot software</description>
  <maintainer email="juampe.lopez@gmail.com">Juan Pedro Lopez</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/canyonero_robot</url>
  <url type="bugtracker">https://github.com/CanyoneroRobotics/TFM/issues</url>
  <url type="repository">https://github.com/CanyoneroRobotics</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>canyonero_bringup</run_depend>
  <run_depend>canyonero_base</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
